# audioapi-poc

./: audioserver.go  buf.gen.yaml  client.go  go.mod  go.sum  main.go  pyproject.toml  streamed_audio.raw
api/api/api/audio/: audio.pb.go  audio_grpc.pb.go
api/api/audio/: audio.pb.go  audio.pb.gw.go  audio.proto  audio_grpc.pb.go
api/audio/: audio.pb.go  audio.proto
audio/: audio_grpc.pb.go
cmd/client/: client.go
cmd/server/: audioserver.go
grpc/: api.py  audio.pb.go  audio.pb.gw.go  audio.proto  audio_grpc.pb.go  audio_grpc.py  buf.gen.yaml
grpc/audioin_api_go/grpc/: audio.pb.go  audio.pb.gw.go  audio_grpc.pb.go
grpc/py_audioin_api/grpc/: audio_pb2.py  audio_pb2.pyi
py_audioin_api/: __init__.py  api.py
py_audioin_api/grpc/: audio_grpc.py  audio_pb2.py  audio_pb2.pyi
